# jcci

./: .gitignore  LICENSE  README.cn.md  README.en.md  README.md  README.pypi.md  java_analyzer.py  jcci-result.html  jcci.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
src/jcci/: analyze.py  config.py  constant.py  database.py  diff_parse.py  graph.py  java_analyzer.py  java_parse.py  jcci.py  mapper_parse.py  sql.py
