[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jcci"
version = "0.0.15"
authors = [
  { name="Oliver Li", email="441640312@qq.com" },
]
description = "Java code commit impact, java code change impact analysis, java代码改动影响范围分析工具"
readme = "README.pypi.md"
license = { file="LICENSE" }
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "javalang >= 0.13.0",
    "unidiff >= 0.7.4"
]

[project.urls]
"Homepage" = "https://github.com/baikaishuipp/jcci"
"Bug Tracker" = "https://github.com/baikaishuipp/jcci/issues"